--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -7,8 +7,9 @@
   align-items: center;
   justify-content: start;
   min-height: 100%;
+  height: 100%;
   width: 100%;
-  padding: 2rem 0;
+  padding: 0;
 }
 
 a,
@@ -17,6 +18,12 @@ a,
   color: var(--color-primary);
   transition: 0.4s;
   padding: 3px;
+}
+
+.error {
+  background-color: red;
+  color: white;
+  padding: 1rem;
 }
 
 @media (hover: hover) {
